# libOri

./: CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindPBRT.cmake
src/: ConicModel.cpp  ConicModel.hpp  DistortionPolynom.cpp  DistortionPolynom.hpp  ExtrinsicModel.cpp  ExtrinsicModel.hpp  IntrinsicModel.cpp  IntrinsicModel.hpp  Ori.cpp  Ori.hpp  SphericModel.cpp  SphericModel.hpp  xml.cpp  xml.hpp
test/: PlyHeaderParser.cpp  PlyHeaderParser.h  main.cpp  mainPBRT.cpp  mainVV.cpp
test/data/: cameraCalibration.json  conic.ori.xml  conic2.ori.xml  spheric.ori.xml
